--- a/views/takeTest.ejs
+++ b/views/takeTest.ejs
@@ -122,7 +122,8 @@
         </form>
         <div id="result"></div>
         
-        <a class="calculator" href="https://www.desmos.com/calculator?lang=sv-SE" target="_blank">
+        <a class="calculator" href="https://www.desmos.com/fourfunction?lang=sv-SE" target="_blank">
+
             <i class="fas fa-calculator"></i>
         </a>
         
