--- a/views/log.ejs
+++ b/views/log.ejs
@@ -256,45 +256,45 @@ footer a {
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
-			<h1>Create Account</h1>
+			<h1>Skappa konto</h1>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
-			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
+			<span>Använd email för att registrera</span>
+			<input type="text" placeholder="Namn" />
 			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
-			<button>Sign Up</button>
+			<input type="password" placeholder="Lösningsord" />
+			<button>Registrera</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
 		<form action="/home" method="post">
-			<h1>Sign in</h1>
+			<h1>Logga In</h1>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
-			<span>or use your account</span>
+			<span>Använd ditt konto</span>
 			<input id="username" name="username" type="email" placeholder="Email" />
-			<input id="password" name="password" type="password" placeholder="Password" />
-			<a href="#">Forgot your password?</a>
-			<button>Sign In</button>
+			<input id="password" name="password" type="password" placeholder="Lösningsord" />
+			<!-- <a href="#">Forgot your password?</a> -->
+			<button>Logga In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-left">
-				<h1>Welcome Back!</h1>
-				<p>To keep connected with us please login with your personal info</p>
-				<button class="ghost" id="signIn">Sign In</button>
+				<h1>Välkomen tillbacka!</h1>
+				<p>Logga in för att komma igång</p>
+				<button class="ghost" id="signIn">Logga In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp">Sign Up</button>
+				<h1>Hej, studenter!</h1>
+				<p>Använd ditt info för att registrera</p>
+				<button class="ghost" id="signUp">Registrera</button>
 			</div>
 		</div>
 	</div>
