--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,8 +13,8 @@
     
     body {
         font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
-        color: #ffffff;
+        background-color: #333;
+        color: #333;
         margin: 0;
         padding: 0;
         display: flex;
@@ -23,7 +23,7 @@
     }
     
     header {
-        background-color: rgba(255,255,255);
+        background-color: #fff;
         color: white;
         padding: 20px;
         display: flex;
@@ -35,6 +35,7 @@
     .header-buttons {
         display: flex;
         gap: 20px;
+        justify-content: flex-end;
     }
     
     .action-btn {
@@ -71,10 +72,31 @@
     footer {
         background-color: rgba(255,255,255);
         color: black;
-        
         text-align: center;
         padding: 15px;
-    }    
+    }   
+    
+    #course {
+    border: none;
+    font-weight: bold;
+    font-size: 20px;
+    height: 50px;
+    width: 60px;
+    outline: none;
+    background-color: white;
+    appearance: none;
+    text-align: center;
+}
+
+    #course:hover {
+        transition: 2ms;
+        text-decoration: underline;
+    }
+    .action-btn:hover {
+        transition: 2ms;
+        text-decoration: underline;
+    }
+
     </style>
 </head>
 <body>
@@ -82,8 +104,14 @@
         <div class="header-buttons">
             <img src="images/bth.png" alt="">
             <!-- <button class="action-btn add-question" onclick="window.location.href='/addquestion'">Add Question</button> -->
-            <button class="action-btn take-test" onclick="window.location.href='/taketest?count=1'">Take the Test</button>            
-            <button class="action-btn add-question" onclick="window.location.href='/add-questionnew'">Admin</button>
+            <select id="course" name="course" class="form-select" required style="height: 50px; width: 100%; margin-top: 50px;">
+                <option value="" disabled selected>Välj kurs</option>
+                <option value="course1">kurs 1</option>
+                <option value="course2">kurs 2</option>
+                <option value="course3">kurs 3</option>
+            </select>
+            <!-- <button class="action-btn take-test" onclick="window.location.href='/taketest?count=1'">Take the Test</button>             -->
+            <button class="action-btn add-question" onclick="window.location.href='/add-questionnew'" style="margin-top: 40px; font-weight: bold; font-size: 20px;">Admin</button>
         </div>
     </header>
 
